fix overlapping mapping in TodoItem component

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@ ul {
   padding: 0;
 }
 
+.nav-links a {
+  margin-right: 10px;
+  text-decoration: none;
+  color: inherit;
+  font-size: large;
+  font-weight: bold;
+}
 .app-container {
   padding: 2rem;
   height: 100vh;
